kubernetes/argocd/applications/horizon-md-landing/service.yml
apiVersion: v1
kind: Service
metadata:
  name: horizon-md
  namespace: horizon-md
spec:
  selector:
    app: horizon-md
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
